--- a/docs/Get-ADTApplication.mdx
+++ b/docs/Get-ADTApplication.mdx
@@ -193,6 +193,8 @@ This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable
 ### - InstallLocation
 ### - InstallDate
 ### - Publisher
+### - HelpLink
+### - EstimatedSize
 ### - SystemComponent
 ### - WindowsInstaller
 ### - Is64BitApplication
