--- a/docs/Uninstall-ADTApplication.mdx
+++ b/docs/Uninstall-ADTApplication.mdx
@@ -16,7 +16,7 @@ Removes one or more applications specified by name, filter script, or InstalledA
 ```powershell
 Uninstall-ADTApplication -InstalledApplication <InstalledApplication[]> [-ArgumentList <String>]
  [-AdditionalArgumentList <String>] [-SecureArgumentList] [-LoggingOptions <String>] [-LogFileName <String>]
- [-PassThru] [<CommonParameters>]
+ [-SuccessExitCodes <Int32[]>] [-RebootExitCodes <Int32[]>] [-PassThru] [<CommonParameters>]
 ```
 
 ### Search
@@ -25,7 +25,8 @@ Uninstall-ADTApplication -InstalledApplication <InstalledApplication[]> [-Argume
 Uninstall-ADTApplication [-Name <String[]>] [-NameMatch <String>] [-ProductCode <Guid[]>]
  [-ApplicationType <String>] [-IncludeUpdatesAndHotfixes] [[-FilterScript] <ScriptBlock>]
  [-ArgumentList <String>] [-AdditionalArgumentList <String>] [-SecureArgumentList] [-LoggingOptions <String>]
- [-LogFileName <String>] [-PassThru] [<CommonParameters>]
+ [-LogFileName <String>] [-SuccessExitCodes <Int32[]>] [-RebootExitCodes <Int32[]>] [-PassThru]
+ [<CommonParameters>]
 ```
 
 ## DESCRIPTION
@@ -255,6 +256,40 @@ For uninstallations, by default the product code is resolved to the DisplayName 
 
 ```yaml
 Type: String
+Parameter Sets: (All)
+Aliases:
+
+Required: False
+Position: Named
+Default value: None
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
+### -SuccessExitCodes
+
+List of exit codes to be considered successful.
+Defaults to values set during ADTSession initialization, otherwise: 0
+
+```yaml
+Type: Int32[]
+Parameter Sets: (All)
+Aliases:
+
+Required: False
+Position: Named
+Default value: None
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
+### -RebootExitCodes
+
+List of exit codes to indicate a reboot is required.
+Defaults to values set during ADTSession initialization, otherwise: 1641, 3010
+
+```yaml
+Type: Int32[]
 Parameter Sets: (All)
 Aliases:
 
